[gd_scene load_steps=12 format=3 uid="uid://bixew7r13bc65"]

[ext_resource type="Script" uid="uid://dx35i5pma1p6d" path="res://Scripts/the_pond.gd" id="1_6vshc"]
[ext_resource type="Texture2D" uid="uid://crqc2wx2gg5ya" path="res://FishAssets/1BITLake.png" id="1_jl2p6"]
[ext_resource type="PackedScene" uid="uid://5jtsl457gpwv" path="res://Scripts/player.tscn" id="3_tuf3c"]
[ext_resource type="Texture2D" uid="uid://cxrkhkvn7j720" path="res://FishAssets/JunkAssets + Player/Dock_Legs.png" id="5_q5amn"]
[ext_resource type="Texture2D" uid="uid://d2dn1aaje0hg2" path="res://FishAssets/JunkAssets + Player/Dock.png" id="6_q5amn"]
[ext_resource type="Script" uid="uid://bc3i6yh8xq8j7" path="res://Scripts/bird_timer.gd" id="7_r3lch"]

[sub_resource type="Curve2D" id="Curve2D_6vshc"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1895, 1010, 0, 0, 0, 0, 1830, 1007, 0, 0, 0, 0, 1792, 1003, 0, 0, 0, 0, 1730, 1028, 0, 0, 0, 0, 1673, 1020, 0, 0, 0, 0, 1629, 1008, 0, 0, 0, 0, 1584, 1007, 0, 0, 0, 0, 1562, 1012, 0, 0, 0, 0, 1520, 1018, 0, 0, 0, 0, 1500, 1019, 0, 0, 0, 0, 1460, 1024, 0, 0, 0, 0, 1401, 1021, 0, 0, 0, 0, 1387, 1020, 0, 0, 0, 0, 1361, 1021, 0, 0, 0, 0, 1324, 1025, 0, 0, 0, 0, 1297, 1035, 0, 0, 0, 0, 1286, 1037, 0, 0, 0, 0, 1246, 1046, 0, 0, 0, 0, 1209, 1048, 0, 0, 0, 0, 1176, 1046, 0, 0, 0, 0, 1152, 1045, 0, 0, 0, 0, 1133, 1046, 0, 0, 0, 0, 1119, 1050, 0, 0, 0, 0, 1076, 1048, 0, 0, 0, 0, 1031, 1050, 0, 0, 0, 0, 1012, 1047, 0, 0, 0, 0, 275, 1052, 0, 0, 0, 0, 1019, 1053, 0, 0, 0, 0, 1121, 1057, 0, 0, 0, 0, 1006, 1059, 0, 0, 0, 0, 270, 1069, 0, 0, 0, 0, 1162, 1066, 0, 0, 0, 0, 1222, 1067, 0, 0, 0, 0, 1335, 1061, 0, 0, 0, 0, 1483, 1055, 0, 0, 0, 0, 1554, 1054, 0, 0, 0, 0, 1631, 1055, 0, 0, 0, 0, 1700, 1065, 0, 0, 0, 0, 1758, 1064, 0, 0, 0, 0, 1810, 1059, 0, 0, 0, 0, 1840, 1062, 0, 0, 0, 0, 1878, 1064, 0, 0, 0, 0, 1898, 1062, 0, 0, 0, 0, 1904, 1045, 0, 0, 0, 0, 1872, 1028, 0, 0, 0, 0, 1843, 1034, 0, 0, 0, 0, 1781, 1039, 0, 0, 0, 0, 1745, 1047, 0, 0, 0, 0, 1698, 1053, 0, 0, 0, 0, 1680, 1054, 0, 0, 0, 0, 1651, 1051, 0, 0, 0, 0, 1632, 1045, 0, 0, 0, 0, 1598, 1036, 0, 0, 0, 0, 1560, 1031, 0, 0, 0, 0, 1527, 1034, 0, 0, 0, 0, 1485, 1042, 0, 0, 0, 0, 1438, 1045, 0, 0, 0, 0, 1390, 1047, 0, 0, 0, 0, 1333, 1047, 0, 0, 0, 0, 1315, 1046, 0, 0, 0, 0, 1290, 1020, 0, 0, 0, 0, 1254, 1027, 0, 0, 0, 0, 1229, 1055, 0, 0, 0, 0, 1183, 1053, 0, 0, 0, 0, 1199, 1032, 0, 0, 0, 0, 1148, 1052, 0, 0, 0, 0, 1137, 1044, 0, 0, 0, 0, 1084, 1031, 0, 0, 0, 0, 1062, 1047, 0, 0, 0, 0, 1036, 1060, 0, 0, 0, 0, 1009, 1041, 0, 0, 0, 0, 983, 1059, 0, 0, 0, 0, 969, 1070, 0, 0, 0, 0, 967, 1074, 0, 0, 0, 0, 951, 1049, 0, 0, 0, 0, 874, 1076, 0, 0, 0, 0, 853, 1049, 0, 0, 0, 0, 808, 1075, 0, 0, 0, 0, 795, 1046, 0, 0, 0, 0, 761, 1067, 0, 0, 0, 0, 738, 1049, 0, 0, 0, 0, 716, 1073, 0, 0, 0, 0, 686, 1046, 0, 0, 0, 0, 651, 1067, 0, 0, 0, 0, 596, 1058, 0, 0, 0, 0, 560, 1047, 0, 0, 0, 0, 559, 1068, 0, 0, 0, 0, 526, 1069, 0, 0, 0, 0, 497, 1044, 0, 0, 0, 0, 466, 1069, 0, 0, 0, 0, 400, 1044, 0, 0, 0, 0, 401, 1066, 0, 0, 0, 0, 323, 1050, 0, 0, 0, 0, 259, 1071, 0, 0, 0, 0, 257, 1053, 0, 0, 0, 0, 879, 1048, 0, 0, 0, 0, 956, 1043, 0, 0, 0, 0, 986, 1033, 0, 0, 0, 0, 1021, 1032, 0, 0, 0, 0, 1128, 1032, 0, 0, 0, 0, 1156, 1029, 0, 0, 0, 0, 1204, 1024, 0, 0, 0, 0, 1243, 1013, 0, 0, 0, 0, 1299, 1009, 0, 0, 0, 0, 1352, 1007, 0, 0, 0, 0, 1578, 990, 0, 0, 0, 0, 1699, 989, 0, 0, 0, 0, 1817, 999, 0, 0, 0, 0, 1873, 999, 0, 0, 0, 0, 1899, 993, 0, 0, 0, 0, 1905, 1020, 0, 0, 0, 0, 1855, 1063, 0, 0, 0, 0, 1835, 1000, 0, 0, 0, 0, 1789, 993, 0, 0, 0, 0, 1761, 1046, 0, 0, 0, 0, 1724, 997, 0, 0, 0, 0, 1691, 1043, 0, 0, 0, 0, 1630, 1062, 0, 0, 0, 0, 1626, 997, 0, 0, 0, 0, 1593, 1035, 0, 0, 0, 0, 1529, 1061, 0, 0, 0, 0, 1520, 1023, 0, 0, 0, 0, 1475, 1019, 0, 0, 0, 0, 1452, 1054, 0, 0, 0, 0, 1459, 1010)
}
point_count = 125

[sub_resource type="Curve2D" id="Curve2D_m16bc"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 425.678, 906.254, 0, 0, 0, 0, 448.98, 927.617, 0, 0, 0, 0, 478.107, 911.34, 0, 0, 0, 0, 509.175, 930.669, 0, 0, 0, 0, 544.127, 907.271, 0, 0, 0, 0, 590.73, 929.651, 0, 0, 0, 0, 621.799, 908.288, 0, 0, 0, 0, 652.868, 928.634, 0, 0, 0, 0, 672.286, 908.288, 0, 0, 0, 0, 711.121, 933.72, 0, 0, 0, 0, 733.452, 927.617, 0, 0, 0, 0, 829.571, 960.17, 0, 0, 0, 0, 899.475, 981.533, 0, 0, 0, 0, 881.999, 934.738, 0, 0, 0, 0, 753, 906, 0, 0, 0, 0, 906, 900, 0, 0, 0, 0, 950.93, 969.326, 0, 0, 0, 0, 954, 904, 0, 0, 0, 0, 1023, 961, 0, 0, 0, 0, 1053, 908, 0, 0, 0, 0, 1117, 969, 0, 0, 0, 0, 1137, 916, 0, 0, 0, 0, 1195, 990, 0, 0, 0, 0, 1231, 916, 0, 0, 0, 0, 1260, 982, 0, 0, 0, 0, 1290, 918, 0, 0, 0, 0, 1336.38, 974.412, 0, 0, 0, 0, 1369, 916, 0, 0, 0, 0, 1397.54, 974.412, 0, 0, 0, 0, 1436, 920, 0, 0, 0, 0, 1474.24, 974.412, 0, 0, 0, 0, 1498, 923, 0, 0, 0, 0, 1556.77, 967.291, 0, 0, 0, 0, 1618, 923, 0, 0, 0, 0, 1633.47, 958.135, 0, 0, 0, 0, 1667, 925, 0, 0, 0, 0, 1743.18, 953.049, 0, 0, 0, 0, 1815, 919, 0, 0, 0, 0, 1816, 890, 0, 0, 0, 0, 470.339, 878.787, 0, 0, 0, 0, 397.522, 859.458, 0, 0, 0, 0, 1810, 824, 0, 0, 0, 0, 383.93, 823.853, 0, 0, 0, 0, 343.152, 793.334, 0, 0, 0, 0, 562, 794, 0, 0, 0, 0, 1806, 791, 0, 0, 0, 0, 1806, 747, 0, 0, 0, 0, 721, 756, 0, 0, 0, 0, 391, 754, 0, 0, 0, 0, 262, 758, 0, 0, 0, 0, 236, 735, 0, 0, 0, 0, 1806, 721, 0, 0, 0, 0, 1806, 695, 0, 0, 0, 0, 253, 705, 0, 0, 0, 0, 224, 708, 0, 0, 0, 0, 228, 683, 0, 0, 0, 0, 1809, 678, 0, 0, 0, 0, 1805, 662, 0, 0, 0, 0, 127, 662, 0, 0, 0, 0, 48, 656)
}
point_count = 60

[sub_resource type="Curve2D" id="Curve2D_q5amn"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1962, 537, 0, 0, 0, 0, 1939, -29, 0, 0, 0, 0, -33, -35, 0, 0, 0, 0, -32, 503)
}
point_count = 4

[sub_resource type="SegmentShape2D" id="SegmentShape2D_q5amn"]
a = Vector2(840, 1000)
b = Vector2(834, 898)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_r3lch"]
a = Vector2(4, 847)
b = Vector2(5, 1042)

[node name="The Pond" type="Node2D"]
z_as_relative = false
y_sort_enabled = true
script = ExtResource("1_6vshc")

[node name="Player" parent="." instance=ExtResource("3_tuf3c")]
position = Vector2(369, 919)

[node name="Shader" type="CanvasLayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -58

[node name="1bitLake" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(960, 540)
texture = ExtResource("1_jl2p6")

[node name="WaveAndFish" type="Path2D" parent="."]
visible = false
curve = SubResource("Curve2D_6vshc")

[node name="SpawnPoint" type="PathFollow2D" parent="WaveAndFish"]
unique_name_in_owner = true
position = Vector2(1895, 1010)
rotation = -3.09547

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="TreeSpots" type="Path2D" parent="."]
position = Vector2(21.5611, -29.8499)
scale = Vector2(1.02998, 0.983003)
curve = SubResource("Curve2D_m16bc")

[node name="TreeSpawns" type="PathFollow2D" parent="TreeSpots"]
unique_name_in_owner = true
position = Vector2(425.678, 906.254)
rotation = 0.742013
loop = false

[node name="BirdLogic" type="Node2D" parent="."]
visible = false

[node name="BirdZone" type="Path2D" parent="BirdLogic"]
unique_name_in_owner = true
curve = SubResource("Curve2D_q5amn")

[node name="BirdSpawns" type="PathFollow2D" parent="BirdLogic/BirdZone"]
unique_name_in_owner = true
position = Vector2(1962, 537)
rotation = -1.61141

[node name="BirdTimer" type="Timer" parent="BirdLogic"]
unique_name_in_owner = true
autostart = true
script = ExtResource("7_r3lch")

[node name="DockBits" type="StaticBody2D" parent="."]

[node name="Dock" type="Sprite2D" parent="DockBits"]
modulate = Color(0.340339, 0.340339, 0.340339, 1)
position = Vector2(474, 1013)
texture = ExtResource("6_q5amn")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DockBits"]
position = Vector2(1, 29)
polygon = PackedVector2Array(2, 949, 905, 947, 923, 986, -1, 1008)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DockBits"]
shape = SubResource("SegmentShape2D_q5amn")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DockBits"]
shape = SubResource("SegmentShape2D_r3lch")

[node name="DockLegs" type="Sprite2D" parent="DockBits"]
modulate = Color(0.341176, 0.341176, 0.341176, 1)
z_index = 100
position = Vector2(906, 1069)
texture = ExtResource("5_q5amn")

[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
[connection signal="timeout" from="BirdLogic/BirdTimer" to="." method="_on_bird_timer_timeout"]
[connection signal="timeout" from="BirdLogic/BirdTimer" to="BirdLogic/BirdTimer" method="_on_timeout"]
